--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: news-app 
+        working-directory: news-app
     steps:
       - uses: actions/checkout@v3
 
@@ -21,11 +21,13 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build with environment
+      - name: Generate production environment
         run: |
-            echo "export const environment = {
-                production: true,
-                supabaseUrl: 'https://qlszvlsozsdzssnqkaop.supabase.co',
-                supabaseKey: '${{ secrets.SUPABASE_KEY }}'
+          echo "export const environment = {
+            production: true,
+            supabaseUrl: '${{ secrets.SUPABASE_URL }}',
+            supabaseKey: '${{ secrets.SUPABASE_KEY }}'
             };" > src/environments/environment.prod.ts
-            npm run build -- --configuration production
+
+      - name: Build Angular
+        run: npm run build -- --configuration production
