--- a/news-app/package.json
+++ b/news-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:vercel": "node scripts/generate-env.js && ng build --configuration production"
   },
   "private": true,
   "dependencies": {
